--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hyperf-ext/jwt",
+    "name": "hyperf/jwt",
     "type": "library",
     "license": "MIT",
     "keywords": [
@@ -23,7 +23,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "HyperfExt\\Jwt\\": "src/"
+            "Hyperf\\Jwt\\": "src/"
         }
     },
     "autoload-dev": {
@@ -32,21 +32,21 @@
         }
     },
     "require": {
-        "php": ">=7.3",
-        "ext-swoole": ">=4.5",
+        "php": ">=8.0",
+        "ext-swoole": ">=4.6",
         "ext-json": "*",
         "ext-openssl": "*",
-        "hyperf/cache": "^2.1",
-        "hyperf/command": "^2.1",
-        "hyperf/config": "^2.1",
-        "hyperf/di": "^2.1",
-        "hyperf/framework": "^2.1",
+        "hyperf/cache": "~3.0.x-dev",
+        "hyperf/command": "~3.0.x-dev",
+        "hyperf/config": "~3.0.x-dev",
+        "hyperf/di": "~3.0.x-dev",
+        "hyperf/framework": "~3.0.x-dev",
         "lcobucci/jwt": "~4.1.0",
         "nesbot/carbon": "^2.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "hyperf/testing": "^2.1",
+        "hyperf/testing": "lcobucci/jwt",
         "phpstan/phpstan": "^0.12",
         "swoole/ide-helper": "dev-master",
         "mockery/mockery": "^1.0"
@@ -61,7 +61,7 @@
     },
     "extra": {
         "hyperf": {
-            "config": "HyperfExt\\Jwt\\ConfigProvider"
+            "config": "Hyperf\\Jwt\\ConfigProvider"
         }
     }
 }
