--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "hyperf/testing": "lcobucci/jwt",
+        "hyperf/testing": "~3.0.x-dev",
         "phpstan/phpstan": "^0.12",
         "swoole/ide-helper": "dev-master",
         "mockery/mockery": "^1.0"
